--- a/clIent/src/CSS/ProductPage.css
+++ b/clIent/src/CSS/ProductPage.css
@@ -2,3 +2,12 @@
   text-align: center;
   margin: 20px;
 }
+
+.card-img-top {
+  transition: transform 0.6s;
+}
+.card-img-top:hover {
+  -ms-transform: scale(1.5); /* IE 9 */
+  -webkit-transform: scale(1.5); /* Safari 3-8 */
+  transform: scale(1.5);
+}
